# Solucao_Completa_End_To_End_Machine_Learning

./: .gitignore  README.md  modelo_randon_florest_v1.pkl  pyproject.toml  tratativa_dos_dados.ipynb
api/: app.py
